[package]
name = "island3d"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.92"
bytemuck = { version = "1.19.0", features=["derive"] }
cgmath = "0.18.0"
env_logger = "0.11.5"
image = "0.25.5"
tokio = { version = "1.41.0", features = ["full"] }
wgpu = "23.0.0"
wgpu_text = "0.9.1"
bespoke-engine = { path = "../bespoke-engine" }
log = "0.4.22"
load_file = "1.0.1"
phf = { version = "0.11.2", default-features = false }

[build-dependencies]
bespoke-engine = { path = "../bespoke-engine" }

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.14.1"
winit = { version = "0.30.5", features = ["android-game-activity"] }
pollster = "0.4.0"

[target.'cfg(not(target_os = "android"))'.dependencies]
winit = "0.30.5"

[lib]
name = "main"
crate-type = ["cdylib"]
path = "src/android.rs"

[[bin]]
name = "island3d"
path = "src/desktop.rs"

# [package.metadata.android]
# build_targets = ["armv7-linux-androideabi", "aarch64-linux-android"]
# target_sdk_version = 29
# min_sdk_version = 23
